--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,23 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
-{{!-- Feel free to remove this! --}}
-
-{{outlet}}
+<div class="container">
+  <div class="menu">
+    {{#link-to "index"}}
+      <h1>
+        <em>SuperRentals</em>
+      </h1>
+    {{/link-to}}
+    <div class="links">
+      {{#link-to "about"}}
+        About
+      {{/link-to}}
+      {{#link-to "contact"}}
+        Contact
+      {{/link-to}}
+      {{#link-to "rentals"}}
+        Rentals
+      {{/link-to}}
+    </div>
+  </div>
+  <div class="body">
+    {{outlet}}
+  </div>
+</div>
