--- a/app/templates/rentals.hbs
+++ b/app/templates/rentals.hbs
@@ -1,4 +1,3 @@
-{{outlet}}
 <div class="jumbo">
   <div class="right tomster"></div>
   <h2>Welcome!</h2>
@@ -7,6 +6,12 @@
   </p>
 </div>
 
-{{#each model as |rentalUnit|}}
-  {{rental-listing rental=rentalUnit}}
-{{/each}}
+{{#list-filter
+   filter=(action 'filterByCity')
+   as |filteredResults|}}
+  <ul class="results">
+    {{#each filteredResults as |rentalUnit|}}
+      <li>{{rental-listing rental=rentalUnit}}</li>
+    {{/each}}
+  </ul>
+{{/list-filter}}
